--- a/source/index.html
+++ b/source/index.html
@@ -2,10 +2,42 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Cat Energy</title>
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	
+	<div style="display: none">
+		<include src="build/img/sprite.svg"><include>	
+	</div>
+
+	<header class="page-header">
+		<a class="page-header__logo">
+			<svg class="page-header__logo-image" width="191" height="38">
+				<use class="page-header__logo-mobile" xlink:href="#logo-mobile"></use>
+				<use class="page-header__logo-tablet" xlink:href="#logo-tablet"></use>
+				<use class="page-header__logo-desktop" xlink:href="#logo-desktop"></use>
+			</svg>
+		</a>
+		<nav class="main-nav main-nav--closed main-nav--nojs">
+			<button class="main-nav__toggle" type="button">
+				<span class="visually-hidden">Меню</span>
+			</button>
+			<ul class="main-nav__list site-list">
+				<li class="site-list__item">
+					<a>Главная</a>
+				</li>
+				<li class="site-list__item">
+					<a href="#catalog">Каталог продукции</a>
+				</li>
+				<li class="site-list__item">
+					<a href="#program">Подбор программы</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+
+	<script src="js/main-nav/main-nav.js"></script>
 </body>
 </html>
