--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,7 @@
 		<include src="build/img/sprite.svg"><include>	
 	</div>
 
+	<!-- Page-Header -->
 	<header class="page-header">
 		<a class="page-header__logo">
 			<svg class="page-header__logo-image" width="191" height="38">
@@ -25,7 +26,7 @@
 				<span class="visually-hidden">Меню</span>
 			</button>
 			<ul class="main-nav__list site-list">
-				<li class="site-list__item">
+				<li class="site-list__item site-list__item--active">
 					<a>Главная</a>
 				</li>
 				<li class="site-list__item">
@@ -37,6 +38,48 @@
 			</ul>
 		</nav>
 	</header>
+
+	<!-- Page-Main -->
+	<main class="page-main">	
+		<h1 class="visually-hidden">Cat Energy - сбалансированное питание для котов</h1>
+
+		<!-- Nutrition-Program -->
+		<article class="nutrition-program">
+			<div class="nutrition-program__wrapper">
+				<div class="nutrition-program__flex">
+					<h2 class="nutrition-program__title">Функциональное питание для котов</h2>
+					<p class="nutrition-program__text">Занялся собой? Займись котом!</p>
+					<a class="nutrition-program__link button nutrition-program__link--top" 
+					 href="#link">Подобрать программу</a>
+				</div>
+				<picture>
+					<source type="image/webp" media="(min-width: 1440px)" 
+					 srcset="img/nutrition-program/index-can-desktop@1x.webp 1x, 
+					 	     img/nutrition-program/index-can-desktop@2x.webp 2x">
+					<source type="image/webp" media="(min-width: 768px)" 
+					 srcset="img/nutrition-program/index-can-tablet@1x.webp 1x,
+					 		 img/nutrition-program/index-can-tablet@2x.webp 2x">
+					<source type="image/webp" 
+					 srcset="img/nutrition-program/index-can-mobile@1x.webp 1x,
+					     	 img/nutrition-program/index-can-mobile@2x.webp 2x">
+					
+					<source media="(min-width: 1440px)" 
+					 srcset="img/nutrition-program/index-can-desktop@1x.png 1x,
+					 		 img/nutrition-program/index-can-desktop@2x.png 2x">
+					<source media="(min-width: 768px)" 
+					 srcset="img/nutrition-program/index-can-tablet@1x.jpg 1x,
+					 		 img/nutrition-program/index-can-tablet@2x.jpg 2x">
+					<img class="nutrition-program__img" 
+					 src="img/nutrition-program/index-can-mobile@1x.png" 
+					 srcset="img/nutrition-program/index-can-mobile@2x.png 2x"
+					 alt="Корм Cat Energy Pro - со вкусом курицы">
+				</picture>
+				<a class="nutrition-program__link button nutrition-program__link--bottom" 
+				 href="#link">Подобрать программу</a>
+			</div>
+		</article>
+
+	</main>
 
 	<script src="js/main-nav/main-nav.js"></script>
 </body>
