--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Cat Energy</title>
 	<link rel="stylesheet" href="css/style.min.css">
+	<script src="js/picturefill/picturefill.min.js"></script>
 </head>
 <body>
 	<div style="display: none">
@@ -78,7 +79,28 @@
 				 href="#link">Подобрать программу</a>
 			</div>
 		</article>
-
+		
+		<!-- Categories -->
+		<section class="categories">
+			<div class="categories__wrapper">
+				<ul class="categories__list">
+					<li class="categories__item">
+						<h2 class="categories__title">Похудение</h2>
+						<p class="categories__text">Ваш кот весит больше собаки и почти утратил 
+						способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет 
+						вашему питомцу сбросить лишний вес</p>
+						<a class="categories__link" href="#slim">Каталог Slim</a>
+					</li>
+					<li class="categories__item">
+						<h2 class="categories__title">Набор массы</h2>
+						<p class="categories__text">Заработать авторитет среди дворовых котов 
+						и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить 
+						необходимые мышцы!</p>
+						<a class="categories__link" href="#pro">Каталог Pro</a>
+					</li>
+				</ul>
+			</div>
+		</section>
 	</main>
 
 	<script src="js/main-nav/main-nav.js"></script>
