--- a/source/index.html
+++ b/source/index.html
@@ -82,17 +82,18 @@
 		
 		<!-- Categories -->
 		<section class="categories">
+			<h2 class="visually-hidden">Категории</h2>
 			<div class="categories__wrapper">
 				<ul class="categories__list">
 					<li class="categories__item">
-						<h2 class="categories__title">Похудение</h2>
+						<h3 class="categories__title">Похудение</h3>
 						<p class="categories__text">Ваш кот весит больше собаки и почти утратил 
 						способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет 
 						вашему питомцу сбросить лишний вес</p>
 						<a class="categories__link" href="#slim">Каталог Slim</a>
 					</li>
 					<li class="categories__item">
-						<h2 class="categories__title">Набор массы</h2>
+						<h3 class="categories__title">Набор массы</h3>
 						<p class="categories__text">Заработать авторитет среди дворовых котов 
 						и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить 
 						необходимые мышцы!</p>
