--- a/source/index.html
+++ b/source/index.html
@@ -82,8 +82,8 @@
 		
 		<!-- Categories -->
 		<section class="categories">
-			<h2 class="visually-hidden">Категории</h2>
 			<div class="categories__wrapper">
+				<h2 class="visually-hidden">Категории</h2>
 				<ul class="categories__list">
 					<li class="categories__item">
 						<h3 class="categories__title">Похудение</h3>
@@ -100,6 +100,31 @@
 						<a class="categories__link" href="#pro">Каталог Pro</a>
 					</li>
 				</ul>
+			</div>
+		</section>
+
+		<!-- Advanteges -->
+		<section class="advantages">
+			<div class="advantages__wrapper">
+				<h2 class="advantages__title">Как это работает</h2>
+				<ol class="advantages__list">
+					<li class="advantages__item">
+						<p class="advantages__description">Функциональное питание содержит 
+						только полезные питательные вещества.</p>
+					</li>
+					<li class="advantages__item">
+						<p class="advantages__description">Выпускается в виде порошка, 
+						который нужно лишь залить кипятком и готово.</p>
+					</li>
+					<li class="advantages__item">
+						<p class="advantages__description">Замените один-два приема 
+						обычной еды на наше функциональное питание.</p>
+					</li>
+					<li class="advantages__item">
+						<p class="advantages__description">Уже через месяц наслаждайтесь 
+						изменениями к лучшему вашего питомца!</p>
+					</li>
+				</ol>
 			</div>
 		</section>
 	</main>
