--- a/source/index.html
+++ b/source/index.html
@@ -127,8 +127,94 @@
 				</ol>
 			</div>
 		</section>
+
+		<!-- Result -->
+		<section class="result">
+			<div class="result__wrapper">
+				<div class="result__container">
+					<h2 class="result__title">Живой пример</h2>
+					<p class="result__text">Борис сбросил 5 кг за 2 месяца, просто заменив 
+					свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих 
+					тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+					<div class="result__table-container">
+						<div class="result__table">
+							<div class="result__table-wrapper">
+								<div class="result__description-header">5 кг</div>
+								<span class="result__description">снижение веса</span>
+							</div>
+							<div class="result__table-wrapper">
+								<div class="result__description-header">60 дней</div>
+								<span class="result__description">затрачено времени</span>
+							</div>
+						</div>
+						<p class="result__cost">Затраты на питание: <span class="result__cost-price">15 000 руб.</span></p>
+					</div>
+				</div>
+				<div class="result__wrapper-slider">
+					<div class="result__slider">
+						<div class="result__img-before result__img-before--block">
+							<picture>
+								<source type="image/webp" media="(min-width: 1440px)" 
+								 srcset="img/result/before-desktop@1x.webp 1x, 
+								 	     img/result/before-desktop@2x.webp 2x">
+								<source type="image/webp" media="(min-width: 768px)" 
+								 srcset="img/result/before-tablet@1x.webp 1x,
+								 		 img/result/before-tablet@2x.webp 2x"> 
+								<source type="image/webp" 
+								 srcset="img/result/before-mobile@1x.webp 1x,
+								     	 img/result/before-mobile@2x.webp 2x">
+								
+								<source media="(min-width: 1440px)" 
+								 srcset="img/result/before-desktop@1x.png 1x,
+								 		 img/result/before-desktop@2x.png 2x">
+								<source media="(min-width: 768px)" 
+								 srcset="img/result/before-tablet@1x.png 1x,
+								 		 img/result/before-tablet@2x.png 2x"> 
+								<img class="result__img" 
+								 src="img/result/before-mobile@1x.png" 
+								 srcset="img/result/before-mobile@2x.png 2x"
+								 alt="Толстый кот">
+							</picture>
+						</div>
+						<div class="result__img-after">
+							<picture>
+								<source type="image/webp" media="(min-width: 1440px)" 
+								 srcset="img/result/after-desktop@1x.webp 1x, 
+								 	     img/result/after-desktop@2x.webp 2x">
+								<source type="image/webp" media="(min-width: 768px)" 
+								 srcset="img/result/after-tablet@1x.webp 1x,
+								 		 img/result/after-tablet@2x.webp 2x"> 
+								<source type="image/webp" 
+								 srcset="img/result/after-mobile@1x.webp 1x,
+								     	 img/result/after-mobile@2x.webp 2x">
+								
+								<source media="(min-width: 1440px)" 
+								 srcset="img/result/after-desktop@1x.png 1x,
+								 		 img/result/after-desktop@2x.png 2x">
+								<source media="(min-width: 768px)" 
+								 srcset="img/result/after-tablet@1x.png 1x,
+								 		 img/result/after-tablet@2x.png 2x"> 
+								<img class="result__img" 
+								 src="img/result/after-mobile@1x.png" 
+								 srcset="img/result/after-mobile@2x.png 2x"
+								 alt="Толстый кот">
+							</picture>
+						</div>
+					</div>
+					<div class="result__container-button">
+						<button class="result__button-before" type="button">Было</button>
+						<button class="result__button-before-after" type="button">
+							<span class="visually-hidden">Было - Стало</span>
+							<span class="result__button-switch result__button-switch--left"></span>
+						</button>
+						<button class="result__button-after" type="button">Стало</button>
+					</div>		
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<script src="js/main-nav/main-nav.js"></script>
+	<script src="js/result/result.js"></script>
 </body>
 </html>
