--- a/source/index.html
+++ b/source/index.html
@@ -219,10 +219,12 @@
 		<!-- Map -->
 		<article class="map">
 			<h2 class="visually-hidden">Карта нашего местонахождения</h2>
-			<div class="map__address-wrapper">
-				<b class="map__text">Приглашаем к сотрудничеству дилеров!</b>
-				<p class="map__address">ул. Большая Конюшенная, д. 19/8 
-				<span class="map__address-city">Санкт-Петербург</span></p>
+			<div class="map__wrapper">
+				<div class="map__address-wrapper">
+					<b class="map__text">Приглашаем к сотрудничеству дилеров!</b>
+					<p class="map__address">ул. Большая Конюшенная, д. 19/8 
+					<span class="map__address-city">Санкт-Петербург</span></p>
+				</div>
 			</div>
 			<div class="map__map-wrapper">
 				<picture>
@@ -250,6 +252,56 @@
 				<iframe class="map__google" src="https://www.google.com/maps/d/embed?mid=1z1i4GYIvePJXnou2iau4muaOZkEzprVx"  height="362" style="border:0;"></iframe>
 			</div>
 		</article>
+
+		<div class="page-footer__wrapper">
+			<div class="page-footer__logo">
+				<a class="page-footer__img-link">
+					<img class="page-footer__img" src="img/page-footer/logo-footer.svg" width="128" height="24" 
+					 alt="Логотип - Cat Energy">
+				</a>
+			</div>
+			<div class="page-footer__social">
+				<ul class="page-footer__social-list social-list">
+					<li class="social-list__item">
+						<a class="social-list__link" href="https://vk.com/" target="_blank" title="Вконтакте">
+							<span class="visually-hidden">Вконтакте</span>
+							<svg class="social-list__logo-vk" role="img" aria-labelledby="social-footer" focusable="false"
+							 width="22" height="12">
+								<use class="social-list__vk" xlink:href="#icon-social-vk"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="social-list__item">
+						<a class="social-list__link" href="https://www.instagram.com/" target="_blank" title="Инстаграм">
+							<span class="visually-hidden">Инстаграм</span>
+							<svg class="social-list__logo-insta" role="img" aria-labelledby="social-footer" focusable="false"
+							 width="16" height="16">
+								<use class="social-list__insta" xlink:href="#icon-social-insta"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="social-list__item">
+						<a class="social-list__link" href="https://ru-ru.facebook.com/" target="_blank" title="Фейсбук">
+							<span class="visually-hidden">Фейсбук</span>
+							<svg class="social-list__logo-fb" role="img" aria-labelledby="social-footer" focusable="false"
+							 width="10" height="19">
+								<use class="social-list__fb" xlink:href="#icon-social-fb"></use>
+							</svg>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="page-footer__copyright">
+				<a class="page-footer__link-copyright" href="https://htmlacademy.ru/" target="_blank" 
+				 title="HTML Academy">
+					<span class="page-footer__copyright-text">HTML Academy</span>
+					<svg class="page-footer__copyright-logo" role="img" aria-labelledby="copyright-footer" focusable="false"
+					 width="27" height="34">
+						<use class="social-list__htmlacademy" xlink:href="#htmlacademy"></use>
+					</svg>
+				</a>
+			</div>
+		</div>
 	</footer>
 
 	<script src="js/main-nav/main-nav.js"></script>
