Добавил блок additional

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -95,7 +95,7 @@
 								</div>
 							</div>
 							<div class="catalog__wrapper-button">
-								<a class="catalog__button button" href="#order">Заказать</a>
+								<button class="catalog__button button" href="#order">Заказать</button>
 							</div>
 						</article>
 					</li>
@@ -145,7 +145,7 @@
 								</div>
 							</div>
 							<div class="catalog__wrapper-button">
-								<a class="catalog__button button" href="#order">Заказать</a>
+								<button class="catalog__button button" type="button">Заказать</button>
 							</div>
 						</article>
 					</li>
@@ -195,7 +195,7 @@
 								</div>
 							</div>
 							<div class="catalog__wrapper-button">
-								<a class="catalog__button button" href="#order">Заказать</a>
+								<button class="catalog__button button" type="button">Заказать</button>
 							</div>
 						</article>
 					</li>
@@ -245,7 +245,7 @@
 								</div>
 							</div>
 							<div class="catalog__wrapper-button">
-								<a class="catalog__button button" href="#order">Заказать</a>
+								<button class="catalog__button button" type="button">Заказать</button>
 							</div>
 						</article>
 					</li>
@@ -295,7 +295,7 @@
 								</div>
 							</div>
 							<div class="catalog__wrapper-button">
-								<a class="catalog__button button" href="#order">Заказать</a>
+								<button class="catalog__button button" type="button">Заказать</button>
 							</div>
 						</article>
 					</li>
@@ -345,7 +345,7 @@
 								</div>
 							</div>
 							<div class="catalog__wrapper-button">
-								<a class="catalog__button button" href="#order">Заказать</a>
+								<button class="catalog__button button" type="button">Заказать</button>
 							</div>
 						</article>
 					</li>
@@ -395,7 +395,7 @@
 								</div>
 							</div>
 							<div class="catalog__wrapper-button">
-								<a class="catalog__button button" href="#order">Заказать</a>
+								<button class="catalog__button button" type="button">Заказать</button>
 							</div>
 						</article>
 					</li>
@@ -414,6 +414,62 @@
 						</div>
 					</li>
 				</ul>
+			</div>
+		</section>
+
+		<!-- Additional -->
+		<section class="additional">
+			<div class="additional__wrapper">
+				<h2 class="additional__title">Дополнительные товары</h2>
+				<div class="additional__container">
+					<ul class="additional__list">
+						<li class="additional__item">
+							<div class="additional__container-item">
+								<h3 class="additional__item-title">Сахарозаменитель</h3>
+								<dl class="additional__container-value">
+									<dt class="additional__value"><span>1</span> упаковка <span>(100 г)</span></dt>
+									<dd class="additional__price">200 Р.</dd>
+								</dl>
+							</div>
+							<button class="additional__button button" type="button">Заказать</button>
+						</li>
+						<li class="additional__item">
+							<div class="additional__container-item">
+								<h3 class="additional__item-title">Питьевая вода</h3>
+								<dl class="additional__container-value">
+									<dt class="additional__value"><span>5</span> литров</dt>
+									<dd class="additional__price">50 Р.</dd>
+								</dl>
+							</div>
+							<button class="additional__button button" type="button">Заказать</button>
+						</li>
+						<li class="additional__item">
+							<div class="additional__container-item">
+								<h3 class="additional__item-title">Молоко</h3>
+								<dl class="additional__container-value">
+									<dt class="additional__value"><span>1</span> литр</dt>
+									<dd class="additional__price">100 Р.</dd>
+								</dl>
+							</div>
+							<button class="additional__button button" type="button">Заказать</button>
+						</li>
+						<li class="additional__item">
+							<div class="additional__container-item">
+								<h3 class="additional__item-title">Витамины</h3>
+								<dl class="additional__container-value">
+									<dt class="additional__value"><span>1</span> упаковка <span>(30 г)</span></dt>
+									<dd class="additional__price">300 Р.</dd>	
+								</dl>
+							</div>
+							<button class="additional__button button" type="button">Заказать</button>
+						</li>
+					</ul>
+					<div class="additional__stock">
+						<p class="additional__stock-text">
+							Закажите все<br> и получите чехол для кота в подарок!
+						</p>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
