--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,6 +9,7 @@
 	<script src="js/picturefill/picturefill.min.js"></script>
 </head>
 <body class="page-internal">
+	
 	<div style="display: none">
 		<include src="build/img/sprite.svg"><include>	
 	</div>
@@ -34,7 +35,7 @@
 					<a>Каталог продукции</a>
 				</li>
 				<li class="site-list__item">
-					<a href="#program">Подбор программы</a>
+					<a href="form.html">Подбор программы</a>
 				</li>
 			</ul>
 		</nav>
@@ -427,7 +428,7 @@
 							</div>
 						</article>
 					</li>
-					<li class="catalog__item">
+					<li class="catalog__item catalog__item--still">
 						<div class="catalog__item-still">
 							<div class="caralog__wrapper-still">
 								<a class="catalog__button-plus" href="#still">
