--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@
 	<script src="js/picturefill/picturefill.min.js"></script>
 </head>
 <body>
+	
 	<div style="display: none">
 		<include src="build/img/sprite.svg"><include>	
 	</div>
@@ -34,7 +35,7 @@
 					<a href="catalog.html">Каталог продукции</a>
 				</li>
 				<li class="site-list__item">
-					<a href="#program">Подбор программы</a>
+					<a href="form.html">Подбор программы</a>
 				</li>
 			</ul>
 		</nav>
