Правки (в основном footer)

--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
 					<h2 class="nutrition-program__title">Функциональное питание для котов</h2>
 					<p class="nutrition-program__text">Занялся собой? Займись котом!</p>
 					<a class="nutrition-program__link button nutrition-program__link--top" 
-					 href="#link">Подобрать программу</a>
+					 href="form.html">Подобрать программу</a>
 				</div>
 				<picture>
 					<source type="image/webp" media="(min-width: 1440px)" 
@@ -77,7 +77,7 @@
 					 alt="Корм Cat Energy Pro - со вкусом курицы">
 				</picture>
 				<a class="nutrition-program__link button nutrition-program__link--bottom" 
-				 href="#link">Подобрать программу</a>
+				 href="form.html">Подобрать программу</a>
 			</div>
 		</article>
 		
@@ -303,7 +303,7 @@
 					<span class="footer-nav__copyright-text">HTML Academy</span>
 					<svg class="footer-nav__copyright-logo" role="img" aria-labelledby="copyright-footer" focusable="false"
 					 width="27" height="34">
-						<use class="social-list__htmlacademy" xlink:href="#htmlacademy"></use>
+						<use class="copyright__htmlacademy" xlink:href="#htmlacademy"></use>
 					</svg>
 				</a>
 			</div>
