--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,17 +12,18 @@
 <body class="page-internal">
 	
 	<div style="display: none">
-		<include src="build/img/sprite.svg"><include>	
+		<include src="build/img/sprite.svg"></include>	
 	</div>
 
 	<!-- Page-Header -->
 	<header class="page-header">
 		<a class="page-header__logo" href="index.html">
-			<svg class="page-header__logo-image" width="191" height="38">
-				<use class="page-header__logo-mobile" xlink:href="#logo-mobile"></use>
-				<use class="page-header__logo-tablet" xlink:href="#logo-tablet"></use>
-				<use class="page-header__logo-desktop" xlink:href="#logo-desktop"></use>
-			</svg>
+			<picture>
+				<source media="(min-width: 1440px)" srcset="img/page-header/logo-desktop.svg">
+				<source media="(min-width: 768px)" srcset="img/page-header/logo-tablet.svg">
+				<img class="page-header__logo-image" src="img/page-header/logo-mobile.svg" width="191" height="39" 
+				 alt="Логотип - Cat Energy">
+			</picture>
 		</a>
 		<nav class="main-nav main-nav--closed main-nav--nojs">
 			<button class="main-nav__toggle" type="button">
@@ -557,27 +558,30 @@
 			<div class="footer-nav__social">
 				<ul class="footer-nav__social-list social-list">
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://vk.com/" target="_blank" title="Вконтакте">
+						<a class="social-list__link" href="https://vk.com/" target="_blank" title="Вконтакте"
+						 aria-label="Переход на сайт Вконтакте">
 							<span class="visually-hidden">Вконтакте</span>
-							<svg class="social-list__logo-vk" role="img" aria-labelledby="social-footer" focusable="false"
+							<svg class="social-list__logo-vk" role="img" focusable="false"
 							 width="22" height="12">
 								<use class="social-list__vk" xlink:href="#icon-social-vk"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://www.instagram.com/" target="_blank" title="Инстаграм">
+						<a class="social-list__link" href="https://www.instagram.com/" target="_blank" title="Инстаграм"
+						 aria-label="Переход на сайт Инстаграм">
 							<span class="visually-hidden">Инстаграм</span>
-							<svg class="social-list__logo-insta" role="img" aria-labelledby="social-footer" focusable="false"
+							<svg class="social-list__logo-insta" role="img" focusable="false"
 							 width="16" height="16">
 								<use class="social-list__insta" xlink:href="#icon-social-insta"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://ru-ru.facebook.com/" target="_blank" title="Фейсбук">
+						<a class="social-list__link" href="https://ru-ru.facebook.com/" target="_blank" title="Фейсбук"
+						 aria-label="Переход на сайт Фейсбук">
 							<span class="visually-hidden">Фейсбук</span>
-							<svg class="social-list__logo-fb" role="img" aria-labelledby="social-footer" focusable="false"
+							<svg class="social-list__logo-fb" role="img" focusable="false"
 							 width="10" height="19">
 								<use class="social-list__fb" xlink:href="#icon-social-fb"></use>
 							</svg>
@@ -588,9 +592,9 @@
 			<!-- Footer-Nav__Copyright -->
 			<div class="footer-nav__copyright">
 				<a class="footer-nav__link-copyright" href="https://htmlacademy.ru/" target="_blank" 
-				 title="HTML Academy">
+				 title="HTML Academy" aria-label="Переход на сайт HTML Academy">
 					<span class="footer-nav__copyright-text">HTML Academy</span>
-					<svg class="footer-nav__copyright-logo" role="img" aria-labelledby="copyright-footer" focusable="false"
+					<svg class="footer-nav__copyright-logo" role="img" focusable="false"
 					 width="27" height="34">
 						<use class="copyright__htmlacademy" xlink:href="#htmlacademy"></use>
 					</svg>
