Добавил ссылку на Html Academy

--- a/source/index.html
+++ b/source/index.html
@@ -302,7 +302,8 @@
 			</div>
 			<!-- Footer-Nav__Copyright -->
 			<div class="footer-nav__copyright">
-				<a class="footer-nav__link-copyright" title="HTML Academy" aria-label="Переход на сайт HTML Academy">
+				<a class="footer-nav__link-copyright" href="https://htmlacademy.ru/" title="HTML Academy" 
+				 aria-label="Переход на сайт HTML Academy">
 					<span class="footer-nav__copyright-text">HTML Academy</span>
 					<svg class="footer-nav__copyright-logo" role="img" focusable="false"
 					 width="27" height="34">
