Добавил модификатор для работы значка и поправил iframe

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -517,7 +517,7 @@
 					<span class="map__address-city">Санкт-Петербург</span></p>
 				</div>
 			</div>
-			<div class="map__map-wrapper">
+			<div class="map__map-wrapper map__map-wrapper--pin">
 				<picture>
 					<source type="image/webp" media="(min-width: 1440px)" 
 					 srcset="img/map/bg-map-desktop@1x.webp 1x, 
@@ -540,7 +540,8 @@
 					 srcset="img/map/bg-map-mobile@2x.png 2x"
 					 alt="Толстый кот">
 				</picture>
-				<iframe class="map__google" src="https://www.google.com/maps/d/embed?mid=1z1i4GYIvePJXnou2iau4muaOZkEzprVx"  height="362" style="border:0;"></iframe>
+				<iframe class="map__google" 
+				 src="https://www.google.com/maps/d/embed?mid=1z1i4GYIvePJXnou2iau4muaOZkEzprVx"></iframe> 
 			</div>
 		</section>
 
@@ -604,5 +605,6 @@
 	</footer>
 
 	<script src="js/main-nav/main-nav.js"></script>
+	<script src="js/map/map.js"></script>
 </body>
 </html>
