--- a/source/index.html
+++ b/source/index.html
@@ -260,7 +260,8 @@
 					 alt="Толстый кот">
 				</picture>
 				<iframe class="map__google" 
-				 src="https://www.google.com/maps/d/embed?mid=1z1i4GYIvePJXnou2iau4muaOZkEzprVx"></iframe> 
+				 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1089.915377049192!2d30.311697909025256!3d59.933581750231404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696311b4801559b%3A0xc05b3505949873f7!2z0JHQvtC70YzRiNCw0Y8g0JzQvtGA0YHQutCw0Y8g0YPQuy4sIDI5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkwMDAw!5e0!3m2!1sru!2sru!4v1628336345924!5m2!1sru!2sru" loading="lazy">
+				</iframe>
 			</div>
 		</section>
 		
