--- a/source/form.html
+++ b/source/form.html
@@ -216,8 +216,7 @@
 					 srcset="img/map/bg-map-mobile@2x.png 2x"
 					 alt="Толстый кот">
 				</picture>
-				<iframe class="map__google" 
-				 src="https://www.google.com/maps/d/embed?mid=1z1i4GYIvePJXnou2iau4muaOZkEzprVx"></iframe> 
+				<iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003197!2d30.320858716194994!3d59.938719169054025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1628336749333!5m2!1sru!2sru" loading="lazy"></iframe> 
 			</div>
 		</section>
 
