Перевел сайт на анг. язык и поправил верстку

--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 	 больше собаки и почти утратил способность лазить по деревьям? Пора на диету! 
 	 Cat Energy Slim поможет вашему питомцу сбросить лишний вес. Если ваш кот худой, то серия 
 	 Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!">
-	<title>Cat Energy - Подбор программы</title>
+	<title>Cat Energy - Selection of the program</title>
 	<link rel="icon" href="img/favicon/favicon.ico" sizes="36x36" type="image/ico">
 	<link rel="preload" href="fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -34,17 +34,17 @@
 		</a>
 		<nav class="main-nav main-nav--closed main-nav--nojs">
 			<button class="main-nav__toggle" type="button">
-				<span class="visually-hidden">Меню</span>
+				<span class="visually-hidden">Menu</span>
 			</button>
 			<ul class="main-nav__list site-list">
 				<li class="site-list__item">
-					<a href="index.html">Главная</a>
+					<a href="index.html">Main</a>
 				</li>
 				<li class="site-list__item">
-					<a href="catalog.html">Каталог продукции</a>
+					<a href="catalog.html">Product Catalog</a>
 				</li>
 				<li class="site-list__item site-list__item--active">
-					<a>Подбор программы</a>
+					<a>Selection of the program</a>
 				</li>
 			</ul>
 		</nav>
@@ -52,54 +52,54 @@
 	
 	<!-- Page-Main -->
 	<main class="page-main">
-		<h1 class="visually-hidden">Подбор программы для вашего кота</h1>
+		<h1 class="visually-hidden">Selection of the program for your cat</h1>
 
 		<!-- Program -->
 		<section class="program">
 			<div class="program__wrapper">
-				<h2 class="program__title">Подбор программы</h2>
-				<p class="program__information">Заполните анкету и мы подберем<br> программу питания для вашего кота</p>
+				<h2 class="program__title">Selection of the program</h2>
+				<p class="program__information">Fill out the form and we will select<br> a nutrition program for your cat </p>
 				<form class="program__form" action="https://echo.htmlacademy.ru" method="get">
 					<div class="program__wrapper-information-program">
 						<!-- Information -->
 						<fieldset class="program__fields-information">
-							<legend class="visually-hidden">Ваши данные:</legend>
+							<legend class="visually-hidden">Your data:</legend>
 							<p class="program__field-information">
-								<label class="program__information-label" for="name-field">Имя:<span>*</span>
+								<label class="program__information-label" for="name-field">Name:<span>*</span>
 								</label>
 								<input class="program__information-input" type="text" name="name" id="name-field" 
-								 placeholder="Барсик" autocomplete="off" required>
+								 placeholder="Barsik" autocomplete="off" required>
 							</p>
 							<p class="program__field-information">
-								<label class="program__information-label" for="weight-field">Вес (кг):<span>*</span>
+								<label class="program__information-label" for="weight-field">Wight (kg):<span>*</span>
 								</label>
 								<input class="program__information-input" type="text" name="weight" id="weight-field" 
 								 placeholder="7" autocomplete="off" required>
 							</p>
 							<p class="program__field-information">
-								<label class="program__information-label" for="age-field">Возраст (лет):</label>
+								<label class="program__information-label" for="age-field">Age (years old):</label>
 								<input class="program__information-input" type="text" name="age" id="age-field" 
 								 placeholder="7" autocomplete="off">
 							</p>
 						</fieldset>
 						<!-- Program -->
 						<fieldset class="program__fields-program">
-							<legend class="visually-hidden">Программа:</legend>
+							<legend class="visually-hidden">Program:</legend>
 							<ul class="program__program-list">
 								<li class="program__field-program">
 									<input class="program__program-input visually-hidden" type="radio" name="program" 
 									 value="losing-weight" id="losing-weight" checked>
-									<label class="program__program-label" for="losing-weight">Похудение</label>
+									<label class="program__program-label" for="losing-weight">Slimming</label>
 								</li>
 								<li class="program__field-program">
 									<input class="program__program-input visually-hidden" type="radio" name="program" 
 									 value="mass-gain" id="mass-gain">
-									<label class="program__program-label" for="mass-gain">Набор массы</label>
+									<label class="program__program-label" for="mass-gain">Weight gain</label>
 								</li>
 								<li class="program__field-program">
 									<input class="program__program-input visually-hidden" type="radio" name="program" 
 									 value="need-advice" id="need-advice">
-									<label class="program__program-label" for="need-advice">Не знаю (нужен ваш совет)</label>
+									<label class="program__program-label" for="need-advice">I don't know (I need your advice)</label>
 								</li>
 							</ul>
 						</fieldset>
@@ -107,7 +107,7 @@
 					<!-- Contacts -->
 					<div class="program__wrapper-contacts">
 						<fieldset class="program__fields-contacts">
-							<legend class="program__contacts-title">Контактные данные (владельца кота)</legend>
+							<legend class="program__contacts-title">Contact details<br> (of the owner of the cat)</legend>
 							<div class="program__container-contacts">
 								<p class="program__field-contacts">	
 									<label class="program__contacts-label" for="mail-field">E-mail:<span>*</span>
@@ -119,7 +119,7 @@
 									</svg>
 								</p>
 								<p class="program__field-contacts">
-									<label class="program__contacts-label" for="tel-field">Телефон:<span>*</span>
+									<label class="program__contacts-label" for="tel-field">Telephone:<span>*</span>
 									</label>
 									<input class="program__contacts-input" type="tel" name="tel" 
 									 id="tel-field" pattern="[8] [0-9]{3} [0-9]{3}-[0-9]{2}-[0-9]{2}" 
@@ -134,63 +134,63 @@
 					<!-- Comment -->
 					<div class="program__wrapper-comments">
 						<fieldset class="program__fields-comments">
-							<legend class="program__comments-title">Комментарий</legend>
-							<label class="visually-hidden" for="comment-field">Напишите комментарий</label>
+							<legend class="program__comments-title">A comment</legend>
+							<label class="visually-hidden" for="comment-field">Write a comment</label>
 							<textarea class="program__comment" name="comment" 
-							 id="comment-field" placeholder="Расскажите обо всех повадках кота"></textarea>
+							 id="comment-field" placeholder="Tell us about all the habits of the cat"></textarea>
 						</fieldset>
 					</div>
 					<!-- Additionally -->
 					<div class="program__wrapper-additionally">
 						<fieldset class="program__fields-additionally">
-							<legend class="program__additionally-title">Дополнительно</legend>
+							<legend class="program__additionally-title">Additionally</legend>
 							<ul class="program__additionally-list">
 								<li class="program__additionally-item">
 									<input class="program__additionally-input visually-hidden" type="checkbox" 
 									 name="sweetener" id="sweetener-field" checked>
-									<label class="program__additionally-label" for="sweetener-field">Сахарозаменитель
+									<label class="program__additionally-label" for="sweetener-field">Sweetener
 									</label>
 								</li>
 								<li class="program__additionally-item">
 									<input class="program__additionally-input visually-hidden" type="checkbox" 
 									 name="water" id="water-field">
-									<label class="program__additionally-label" for="water-field">Питьевая вода
+									<label class="program__additionally-label" for="water-field">Drinking water
 									</label>
 								</li>
 								<li class="program__additionally-item">
 									<input class="program__additionally-input visually-hidden" type="checkbox" 
 									 name="milk" id="milk-field">
-									<label class="program__additionally-label" for="milk-field">Молоко
+									<label class="program__additionally-label" for="milk-field">Milk
 									</label>
 								</li>
 								<li class="program__additionally-item">
 									<input class="program__additionally-input visually-hidden" type="checkbox" 
 									 name="vitamins" id="vitamins-field">
-									<label class="program__additionally-label" for="vitamins-field">Витамины
+									<label class="program__additionally-label" for="vitamins-field">Vitamins
 									</label>
 								</li>
 							</ul>
 						</fieldset>
 					</div>
 					<div class="program__wrapper-distributor">
-						<button class="program__submit button" type="submit">Отправить заявку</button>
-						<p class="program__necessarily">* — Обязательные поля</p>
+						<button class="program__submit button" type="submit">Send a request</button>
+						<p class="program__necessarily">* — Required fields</p>
 					</div>
 				</form>
 			</div>
 		</section>
 	</main>
 
-		<!-- Page-Footer -->
+	<!-- Page-Footer -->
 	<footer class="page-footer">
 		<!-- Map -->
 		<section class="map">
-			<h2 class="visually-hidden">Карта нашего местонахождения</h2>
+			<h2 class="visually-hidden">Map of our location</h2>
 			<div class="map__wrapper">
 				<div class="map__address-wrapper">
-					<b class="map__text">Приглашаем к сотрудничеству дилеров!</b>
-					<p class="map__address">ул. Большая Конюшенная, д. 19/8 
-					<span class="map__address-city">Санкт-Петербург</span></p>
+					<b class="map__text">We invite dealers to cooperate!</b>
+					<p class="map__address">st. Bolshaya Konyushennaya, house 19/8 
+					<span class="map__address-city">St. Petersburg</span></p>
 				</div>
 			</div>
 			<div class="map__map-wrapper map__map-wrapper--pin">
@@ -214,39 +214,59 @@
 					<img class="map__img" 
 					 src="img/map/bg-map-mobile@1x.png" 
 					 srcset="img/map/bg-map-mobile@2x.png 2x"
-					 alt="Толстый кот">
+					 alt="Fat cat">
 				</picture>
-				<iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003197!2d30.320858716194994!3d59.938719169054025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1628336749333!5m2!1sru!2sru" loading="lazy"></iframe> 
+				<iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003197!2d30.320858716194994!3d59.938719169054025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1628336749333!5m2!1sru!2sru" loading="lazy"></iframe>
 			</div>
 		</section>
-
+		
 		<!-- Footer-Nav -->
 		<section class="footer-nav">
-			<h2 class="visually-hidden">Дополнительная навигация</h2>
+			<h2 class="visually-hidden">Additional navigation</h2>
 			<!-- Footer-Nav__Logo -->
 			<div class="footer-nav__logo">
-				<a class="footer-nav__img-link" href="index.html">
+				<a class="footer-nav__img-link">
 					<img class="footer-nav__img" src="img/footer-nav/logo-footer.svg" width="128" height="24" 
-					 alt="Логотип - Cat Energy">
+					 alt="Logo - Cat Energy">
 				</a>
 			</div>
 			<!-- Footer-Nav__Social -->
 			<div class="footer-nav__social">
 				<ul class="footer-nav__social-list social-list">
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://vk.com/" target="_blank" title="Вконтакте"
-						 aria-label="Переход на сайт Вконтакте">
-							<span class="visually-hidden">Вконтакте</span>
-							<svg class="social-list__logo-vk" role="img" focusable="false"
-							 width="22" height="12">
-								<use class="social-list__vk" xlink:href="#icon-social-vk"></use>
+						<a class="social-list__link" href="https://github.com/IC1101s" target="_blank" title="GitHub"
+						 aria-label="Go to the site GitHub">
+							<span class="visually-hidden">GitHub</span>
+							<svg class="social-list__logo-github" role="img" focusable="false"
+							 width="21" height="21">
+								<use class="social-list__github" xlink:href="#icon-social-github"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://www.instagram.com/" target="_blank" title="Инстаграм"
-						 aria-label="Переход на сайт Инстаграм">
-							<span class="visually-hidden">Инстаграм</span>
+						<a class="social-list__link" href="mailto:stas20stas@gmail.com" target="_blank" title="Gmail"
+						 aria-label="Go to the site Gmail">
+							<span class="visually-hidden">Gmail</span>
+							<svg class="social-list__logo-gmail" role="img" focusable="false"
+							 width="25" height="25">
+								<use class="social-list__gmail" xlink:href="#icon-social-gmail"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="social-list__item">
+						<a class="social-list__link" href="https://twitter.com/IC1101s" target="_blank" title="Twitter"
+						 aria-label="Go to the site Twitter">
+							<span class="visually-hidden">Twitter</span>
+							<svg class="social-list__logo-twitter" role="img" focusable="false"
+							 width="20" height="20">
+								<use class="social-list__twitter" xlink:href="#icon-social-twitter"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="social-list__item">
+						<a class="social-list__link" href="https://www.instagram.com/stassynhik/" target="_blank" title="Instagram"
+						 aria-label="Go to the site Instagram">
+							<span class="visually-hidden">Instagram</span>
 							<svg class="social-list__logo-insta" role="img" focusable="false"
 							 width="16" height="16">
 								<use class="social-list__insta" xlink:href="#icon-social-insta"></use>
@@ -254,12 +274,12 @@
 						</a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://ru-ru.facebook.com/" target="_blank" title="Фейсбук"
-						 aria-label="Переход на сайт Фейсбук">
-							<span class="visually-hidden">Фейсбук</span>
-							<svg class="social-list__logo-fb" role="img" focusable="false"
-							 width="10" height="19">
-								<use class="social-list__fb" xlink:href="#icon-social-fb"></use>
+						<a class="social-list__link" href="https://vk.com/stassyncik" target="_blank" title="Vkontakte"
+						 aria-label="Go to the site Vkontakte">
+							<span class="visually-hidden">Vkontakte</span>
+							<svg class="social-list__logo-vk" role="img" focusable="false"
+							 width="22" height="12">
+								<use class="social-list__vk" xlink:href="#icon-social-vk"></use>
 							</svg>
 						</a>
 					</li>
@@ -267,14 +287,8 @@
 			</div>
 			<!-- Footer-Nav__Copyright -->
 			<div class="footer-nav__copyright">
-				<a class="footer-nav__link-copyright" href="https://htmlacademy.ru/" target="_blank" 
-				 title="HTML Academy" aria-label="Переход на сайт HTML Academy">
-					<span class="footer-nav__copyright-text">HTML Academy</span>
-					<svg class="footer-nav__copyright-logo" role="img" focusable="false"
-					 width="27" height="34">
-						<use class="copyright__htmlacademy" xlink:href="#htmlacademy"></use>
-					</svg>
-				</a>
+				<a class="footer-nav__link-copyright" href="mailto:stas20stas@gmail.com" title="Stanislav.S" 
+				 aria-label="Go to post office Stanislav.S">by<span class="footer-nav__copyright-text"> Stanislav.S</span></a>
 			</div>
 		</section>
 	</footer>
