--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 	 больше собаки и почти утратил способность лазить по деревьям? Пора на диету! 
 	 Cat Energy Slim поможет вашему питомцу сбросить лишний вес. Если ваш кот худой, то серия 
 	 Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!">
-	<title>Cat Energy - Главная</title>
+	<title>Cat Energy - Main</title>
 	<link rel="icon" href="img/favicon/favicon.ico" sizes="36x36" type="image/ico">
 	<link rel="preload" href="fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -29,22 +29,22 @@
 				<source media="(min-width: 1440px)" srcset="img/page-header/logo-desktop.svg">
 				<source media="(min-width: 768px)" srcset="img/page-header/logo-tablet.svg">
 				<img class="page-header__logo-image" src="img/page-header/logo-mobile.svg" width="191" height="39" 
-				 alt="Логотип - Cat Energy">
+				 alt="Logo - Cat Energy">
 			</picture>
 		</a>
 		<nav class="main-nav main-nav--closed main-nav--nojs">
 			<button class="main-nav__toggle" type="button">
-				<span class="visually-hidden">Меню</span>
+				<span class="visually-hidden">Menu</span>
 			</button>
 			<ul class="main-nav__list site-list">
 				<li class="site-list__item site-list__item--active">
-					<a>Главная</a>
+					<a>Main</a>
 				</li>
 				<li class="site-list__item">
-					<a href="catalog.html">Каталог продукции</a>
+					<a href="catalog.html">Product Catalog</a>
 				</li>
 				<li class="site-list__item">
-					<a href="form.html">Подбор программы</a>
+					<a href="form.html">Selection of the program</a>
 				</li>
 			</ul>
 		</nav>
@@ -52,16 +52,16 @@
 
 	<!-- Page-Main -->
 	<main class="page-main">	
-		<h1 class="visually-hidden">Cat Energy - еда для ваших котов</h1>
+		<h1 class="visually-hidden">Cat Energy - food for your cats</h1>
 
 		<!-- Nutrition-Program -->
 		<article class="nutrition-program">
 			<div class="nutrition-program__wrapper">
 				<div class="nutrition-program__flex">
-					<h2 class="nutrition-program__title">Функциональное питание для котов</h2>
-					<p class="nutrition-program__text">Занялся собой? Займись котом!</p>
+					<h2 class="nutrition-program__title">Functional food for cats</h2>
+					<p class="nutrition-program__text">Did you take care of yourself? Take care of the cat!</p>
 					<a class="nutrition-program__link button nutrition-program__link--top" 
-					 href="form.html">Подобрать программу</a>
+					 href="form.html">Choose a program</a>
 				</div>
 				<picture>
 					<source type="image/webp" media="(min-width: 1440px)" 
@@ -83,31 +83,29 @@
 					<img class="nutrition-program__img" 
 					 src="img/nutrition-program/index-can-mobile@1x.png" 
 					 srcset="img/nutrition-program/index-can-mobile@2x.png 2x"
-					 alt="Корм Cat Energy Pro - со вкусом курицы">
+					 alt="Feed Cat Energy Pro - with chicken flavor">
 				</picture>
 				<a class="nutrition-program__link button nutrition-program__link--bottom" 
-				 href="form.html">Подобрать программу</a>
+				 href="form.html">Choose a program</a>
 			</div>
 		</article>
 		
 		<!-- Categories -->
 		<section class="categories">
 			<div class="categories__wrapper">
-				<h2 class="visually-hidden">Категории</h2>
+				<h2 class="visually-hidden">Categories</h2>
 				<ul class="categories__list">
 					<li class="categories__item categories__item--slim">
-						<h3 class="categories__title">Похудение</h3>
-						<p class="categories__text">Ваш кот весит больше собаки и почти утратил 
-						способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет 
-						вашему питомцу сбросить лишний вес</p>
-						<a class="categories__link" href="#slim">Каталог Slim</a>
+						<h3 class="categories__title">Slimming</h3>
+						<p class="categories__text">Does your cat weigh more than a dog and have almost lost the ability to climb trees? 
+						It's time for a diet! Cat Energy Slim helps your pet lose weight</p>
+						<a class="categories__link" href="#slim">Catalog Slim</a>
 					</li>
 					<li class="categories__item categories__item--pro">
-						<h3 class="categories__title">Набор массы</h3>
-						<p class="categories__text">Заработать авторитет среди дворовых котов 
-						и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить 
-						необходимые мышцы!</p>
-						<a class="categories__link" href="#pro">Каталог Pro</a>
+						<h3 class="categories__title">Weight gain</h3>
+						<p class="categories__text">Earn prestige among yard cats and even dogs? 
+						The Cat Energy Pro Series helps your cat build the muscle he needs! </p>
+						<a class="categories__link" href="#pro">Catalog Pro</a>
 					</li>
 				</ul>
 			</div>
@@ -116,23 +114,20 @@
 		<!-- Advanteges -->
 		<section class="advantages">
 			<div class="advantages__wrapper">
-				<h2 class="advantages__title">Как это работает</h2>
+				<h2 class="advantages__title">How it works</h2>
 				<ol class="advantages__list">
 					<li class="advantages__item advantages__item--leaf">
-						<p class="advantages__description">Функциональное питание содержит 
-						только полезные питательные вещества.</p>
+						<p class="advantages__description">Functional food contains only beneficial nutrients.</p>
 					</li>
 					<li class="advantages__item advantages__item--powder">
-						<p class="advantages__description">Выпускается в виде порошка, 
-						который нужно лишь залить кипятком и готово.</p>
+						<p class="advantages__description">It is produced in the form of a powder, which you just need to pour 
+						boiling water over and you're done.</p>
 					</li>
 					<li class="advantages__item advantages__item--dining">
-						<p class="advantages__description">Замените один-два приема 
-						обычной еды на наше функциональное питание.</p>
+						<p class="advantages__description">Replace one or two regular meals with our functional food.</p>
 					</li>
 					<li class="advantages__item advantages__item--clock">
-						<p class="advantages__description">Уже через месяц наслаждайтесь 
-						изменениями к лучшему вашего питомца!</p>
+						<p class="advantages__description">Enjoy the changes for the better of your pet in a month!</p>
 					</li>
 				</ol>
 			</div>
@@ -142,22 +137,21 @@
 		<section class="result">
 			<div class="result__wrapper">
 				<div class="result__container">
-					<h2 class="result__title">Живой пример</h2>
-					<p class="result__text">Борис сбросил 5 кг за 2 месяца, просто заменив 
-					свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих 
-					тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+					<h2 class="result__title">Live example</h2>
+					<p class="result__text">Boris lost 5 kg in 2 months by simply replacing his regular feed with Cat Energy Slim. 
+					Great result without exhausting workouts! However, he did not change his habits and still sleeps 16 hours a day.</p>
 					<div class="result__table-container">
 						<div class="result__table">
 							<div class="result__table-wrapper">
-								<div class="result__description-header">5 кг</div>
-								<span class="result__description">снижение веса</span>
+								<div class="result__description-header">5 kg</div>
+								<span class="result__description">weight loss</span>
 							</div>
 							<div class="result__table-wrapper">
-								<div class="result__description-header">60 дней</div>
-								<span class="result__description">затрачено времени</span>
+								<div class="result__description-header">60 days</div>
+								<span class="result__description">time spent</span>
 							</div>
 						</div>
-						<p class="result__cost">Затраты на питание: <span class="result__cost-price">15 000 руб.</span></p>
+						<p class="result__cost">Food costs: <span class="result__cost-price">15 000 rub.</span></p>
 					</div>
 				</div>
 				<div class="result__wrapper-slider">
@@ -183,7 +177,7 @@
 								<img class="result__img" 
 								 src="img/result/before-mobile@1x.png" 
 								 srcset="img/result/before-mobile@2x.png 2x"
-								 alt="Толстый кот">
+								 alt="Fat cat">
 							</picture>
 						</div>
 						<div class="result__img-after">
@@ -207,17 +201,17 @@
 								<img class="result__img" 
 								 src="img/result/after-mobile@1x.png" 
 								 srcset="img/result/after-mobile@2x.png 2x"
-								 alt="Худой кот">
+								 alt="Skinny cat">
 							</picture>
 						</div>
 					</div>
 					<div class="result__container-button">
-						<button class="result__button-before" type="button">Было</button>
+						<button class="result__button-before" type="button">Before</button>
 						<button class="result__button-before-after" type="button">
-							<span class="visually-hidden">Было - Стало</span>
+							<span class="visually-hidden">Before - After</span>
 							<span class="result__button-switch result__button-switch--left"></span>
 						</button>
-						<button class="result__button-after" type="button">Стало</button>
+						<button class="result__button-after" type="button">After</button>
 					</div>		
 				</div>
 			</div>
@@ -228,12 +222,12 @@
 	<footer class="page-footer">
 		<!-- Map -->
 		<section class="map">
-			<h2 class="visually-hidden">Карта нашего местонахождения</h2>
+			<h2 class="visually-hidden">Map of our location</h2>
 			<div class="map__wrapper">
 				<div class="map__address-wrapper">
-					<b class="map__text">Приглашаем к сотрудничеству дилеров!</b>
-					<p class="map__address">ул. Большая Конюшенная, д. 19/8 
-					<span class="map__address-city">Санкт-Петербург</span></p>
+					<b class="map__text">We invite dealers to cooperate!</b>
+					<p class="map__address">st. Bolshaya Konyushennaya, house 19/8 
+					<span class="map__address-city">St. Petersburg</span></p>
 				</div>
 			</div>
 			<div class="map__map-wrapper map__map-wrapper--pin">
@@ -257,7 +251,7 @@
 					<img class="map__img" 
 					 src="img/map/bg-map-mobile@1x.png" 
 					 srcset="img/map/bg-map-mobile@2x.png 2x"
-					 alt="Толстый кот">
+					 alt="Fat cat">
 				</picture>
 				<iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003197!2d30.320858716194994!3d59.938719169054025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1628336749333!5m2!1sru!2sru" loading="lazy"></iframe>
 			</div>
@@ -265,31 +259,51 @@
 		
 		<!-- Footer-Nav -->
 		<section class="footer-nav">
-			<h2 class="visually-hidden">Дополнительная навигация</h2>
+			<h2 class="visually-hidden">Additional navigation</h2>
 			<!-- Footer-Nav__Logo -->
 			<div class="footer-nav__logo">
 				<a class="footer-nav__img-link">
 					<img class="footer-nav__img" src="img/footer-nav/logo-footer.svg" width="128" height="24" 
-					 alt="Логотип - Cat Energy">
+					 alt="Logo - Cat Energy">
 				</a>
 			</div>
 			<!-- Footer-Nav__Social -->
 			<div class="footer-nav__social">
 				<ul class="footer-nav__social-list social-list">
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://vk.com/" target="_blank" title="Вконтакте"
-						 aria-label="Переход на сайт Вконтакте">
-							<span class="visually-hidden">Вконтакте</span>
-							<svg class="social-list__logo-vk" role="img" focusable="false"
-							 width="22" height="12">
-								<use class="social-list__vk" xlink:href="#icon-social-vk"></use>
+						<a class="social-list__link" href="https://github.com/IC1101s" target="_blank" title="GitHub"
+						 aria-label="Go to the site GitHub">
+							<span class="visually-hidden">GitHub</span>
+							<svg class="social-list__logo-github" role="img" focusable="false"
+							 width="21" height="21">
+								<use class="social-list__github" xlink:href="#icon-social-github"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://www.instagram.com/" target="_blank" title="Инстаграм"
-						 aria-label="Переход на сайт Инстаграм">
-							<span class="visually-hidden">Инстаграм</span>
+						<a class="social-list__link" href="mailto:stas20stas@gmail.com" target="_blank" title="Gmail"
+						 aria-label="Go to the site Gmail">
+							<span class="visually-hidden">Gmail</span>
+							<svg class="social-list__logo-gmail" role="img" focusable="false"
+							 width="25" height="25">
+								<use class="social-list__gmail" xlink:href="#icon-social-gmail"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="social-list__item">
+						<a class="social-list__link" href="https://twitter.com/IC1101s" target="_blank" title="Twitter"
+						 aria-label="Go to the site Twitter">
+							<span class="visually-hidden">Twitter</span>
+							<svg class="social-list__logo-twitter" role="img" focusable="false"
+							 width="20" height="20">
+								<use class="social-list__twitter" xlink:href="#icon-social-twitter"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="social-list__item">
+						<a class="social-list__link" href="https://www.instagram.com/stassynhik/" target="_blank" title="Instagram"
+						 aria-label="Go to the site Instagram">
+							<span class="visually-hidden">Instagram</span>
 							<svg class="social-list__logo-insta" role="img" focusable="false"
 							 width="16" height="16">
 								<use class="social-list__insta" xlink:href="#icon-social-insta"></use>
@@ -297,12 +311,12 @@
 						</a>
 					</li>
 					<li class="social-list__item">
-						<a class="social-list__link" href="https://ru-ru.facebook.com/" target="_blank" title="Фейсбук"
-						 aria-label="Переход на сайт Фейсбук">
-							<span class="visually-hidden">Фейсбук</span>
-							<svg class="social-list__logo-fb" role="img" focusable="false"
-							 width="10" height="19">
-								<use class="social-list__fb" xlink:href="#icon-social-fb"></use>
+						<a class="social-list__link" href="https://vk.com/stassyncik" target="_blank" title="Vkontakte"
+						 aria-label="Go to the site Vkontakte">
+							<span class="visually-hidden">Vkontakte</span>
+							<svg class="social-list__logo-vk" role="img" focusable="false"
+							 width="22" height="12">
+								<use class="social-list__vk" xlink:href="#icon-social-vk"></use>
 							</svg>
 						</a>
 					</li>
@@ -310,14 +324,8 @@
 			</div>
 			<!-- Footer-Nav__Copyright -->
 			<div class="footer-nav__copyright">
-				<a class="footer-nav__link-copyright" href="https://htmlacademy.ru/" title="HTML Academy" 
-				 aria-label="Переход на сайт HTML Academy">
-					<span class="footer-nav__copyright-text">HTML Academy</span>
-					<svg class="footer-nav__copyright-logo" role="img" focusable="false"
-					 width="27" height="34">
-						<use class="copyright__htmlacademy" xlink:href="#htmlacademy"></use>
-					</svg>
-				</a>
+				<a class="footer-nav__link-copyright" href="mailto:stas20stas@gmail.com" title="Stanislav.S" 
+				 aria-label="Go to post office Stanislav.S">by<span class="footer-nav__copyright-text"> Stanislav.S</span></a>
 			</div>
 		</section>
 	</footer>
